rust/cubesql/cubesql/src/compile/engine/df/optimizers/snapshots/cubesql__compile__engine__df__optimizers__sort_push_down__tests__sort_down_sort.snap
---
source: cubesql/src/compile/engine/df/optimizers/sort_push_down.rs
expression: optimize(&plan)
---
Projection: #t3.n3, #t3.n4, #t3.n2, alias=t4
  Projection: #t2.n1 AS n3, #t2.c2 AS n4, #t2.n2, alias=t3
    Projection: #t1.c1 AS n1, #t1.c2, #t1.c3 AS n2, alias=t2
      Sort: #t1.c2 ASC NULLS LAST, #t1.c3 DESC NULLS FIRST
        Projection: #t1.c1, #t1.c2, #t1.c3
          TableScan: t1 projection=None
